Release AI Fabric 0.8.2 trust continuity fix